src/assets/sass/_search_popups.scss
.banner-wrap {
  bottom: 0;
  height: calc(100% - 70px);
  top: 0;
  z-index: 9999;
  margin-top: 0;
  .banner-content {
    height: 100%;
    float: right;
    .banner-for-unregistered {
      background: linear-gradient(to top, rgba(0, 0, 0, .75) 1%, rgba(12, 38, 56, 0.75) 21%, rgba(12, 38, 56, 0.75) 46%,
        rgba(3, 181, 213, 0.75) 73%, rgba(12, 38, 56, 0.75) 100%) $dark_blue;
      padding: 0;
      z-index: 1;
      height: 100%;
      .bg-image {
        background: url(/assets/img/banner-bg.png) top center repeat-y;
        height: 100%;
        .banner-logo {
          background: url(/assets/img/banner-logo.png) no-repeat center;
          background-size: 25%;
          padding-top: 50%;
        }
        p {
          color: #fff;
          font: 500 40px/52px 'Ubuntu Bold';
          text-align: center;
          text-shadow: 0 3px 3px rgba(0, 0, 0, .4);
        }
        span {
          font: 500 52px/56px 'Ubuntu Bold';
          display: block;
        }
        .zoom-now {
          margin: 60px auto;
          display: block;
          width: 200px;
          font: 500 26px/26px 'Ubuntu medium';
          box-shadow: 0 3px 3px 0 rgba(0, 0, 0, .45);
          z-index: 10;
          background-color: $green;
        }
      }
    }
  }
}

.tools-wrap {
  z-index: 10 !important;
  padding: 0;
  display: block;
  margin: 0 auto;
  float: none;
  width: 420px;
  //height: 100%;
  position: relative;
  .tools-hint-block {
    padding: 20px;
    background: #0c2638;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
    color: #fff;
    text-align: center;
    position: relative;
    top: 20px;
    a.hide {
      display: block !important;
      width: 8px;
      height: 8px;
      background: url(/assets/img/cross.png) no-repeat;
      position: absolute;
      top: 15px;
      right: 15px;
    }
    h2 {
      font: 500 24px/38px 'Ubuntu medium';
      color: #fff;
      span {
        display: block;
      }
    }
    p {
      font: 500 20px/26px 'Ubuntu medium';
    }
    ul {
      padding: 0;
      li {
        width: 50px;
        height: 50px;
        border-radius: 5px;
        border: 1px solid #fff;
        display: inline-block;
        margin: 22px 22px 15px;
        font: 400 14px/20px 'Ubuntu medium';

        a {
          display: block;
        }
        .path-map, .radius-map, .lasso-map {
          border-bottom-left-radius: 8px;
          border-bottom-right-radius: 8px;
          border: 2px solid #bdbdbd;
          box-shadow: 0 3px 3px 0 rgba(0, 0, 0, .28);
          //background-size: 100%;
          //padding-top: 35%;
          //overflow: hidden;
          height: 0;
          //display: none;
          //transition: height 5s;

        }
        .path-map {
          background: url(/assets/img/path-map.png) no-repeat center top;
          transition: display 5s ease;
          border: none;
        }
        .radius-map {
          background: url(/assets//img/radius-map.png) no-repeat center top;
          transition: display 5s ease;
          border: none;
        }
        .lasso-map {
          background: url(/assets/img/lasso-map.png) no-repeat center top;
          transition: display 5s ease;
          border: none;
        }
        &:hover {
          border: 1px solid #0874be;
          background-color: #fff;
          @include transition_bg_color;
          .path-map, .radius-map, .lasso-map {
            position: absolute;
            width: 100%;
            //bottom: -170px;
            top: 284px;
            left: 0;
            display: block;
            height: 170px;
            //transition: height 5s;
            //transition: display 5s;
            transition: height .5s ease;
          }
        }
      }
    }
  }
}

.search-area-hint, .weather-hint {
  background: rgba(242, 242, 242, .8);
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .34);
  margin: 3em auto 0;
  position: relative;
  border-radius: 6px;
  p {
    font: 500 28px/34px 'Ubuntu medium';
    color: #0c2638;
    text-align: center;
    padding: 1em;
  }
}

.sidebar-menu-vertical {
  ul {
    padding: 0;
    margin: 0;
    width: 100%;
    transform: rotate(90deg);
    li {
      font: 500 14px/24px 'Ubuntu medium';
      color: #fff;
      background-color: #379948;
      display: inline-block;
      width: 20%;
      border-right: 1px solid #fff;
      border-left: 1px solid #fff;
      float: left;
      &:first-child {
        width: 60px;
      }
      &:hover {
        background-color: #03b5d4;
        @include transition_bg_color;
      }

      a {
        color: #fff;
        display: block;
        margin: 0 auto;
        padding: 15px 8px 15px 30px;
        text-align: center;
      }
      .full-small {
        background: url(/assets/img/icons/vertical_menu.png) 20px 16px no-repeat;
        padding: 27px 0px;
      }
      .events {
        background: url(/assets/img/icons/events-icon.png) 15px 17px no-repeat;
      }
      .recreation {
        background: url(/assets/img/icons/recreation-icon.png) 15px 17px no-repeat;
      }
      .pit-stops {
        background: url(/assets/img/icons/pit-stops-icon.png) 15px 17px no-repeat;
      }
      .weather-link {
        background: url(/assets/img/icons/weather-icon.png) 15px 17px no-repeat;

      }
    }
  }
}

.sort-menu {
  position: absolute;
  top: 70px;
  right: 0;
  bottom: 0;
  height: auto;
  z-index: 101;
  background: #fff;
  width: 450px;
  .close-popup {
    position: absolute;
    width: 100%;
    color: #fff;
    background-color: $navy_blue;
    font: 500 20px/30px 'Ubuntu medium';
    bottom: 0;
    text-align: center;
    @include transition_bg_color;
    &:hover {
      background-color: $blue;
    }
  }
}
/* ... */

